# zip_view

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTRIBUTING.md  README.md
.github/: copilot-instructions.md
.github/workflows/: auto-clang-format.yml  benchmark.yml  ci.yml  codeql-analysis.yml  examples.yaml  tests.yaml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/benchmarks/: CTestTestfile.cmake  Makefile  ZipViewBenchmark  cmake_install.cmake
_codeql_build_dir/examples/: CTestTestfile.cmake  Makefile  ZipViewExample  cmake_install.cmake
_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmarks/: CMakeLists.txt  algo.cpp  ctor.cpp  iter.cpp  loop.cpp  main.cpp  nest.cpp  temp.cpp
cmake/: ZipViewsConfig.cmake.in
dev/bench/: data.js
dev/bench/arm32/: data.js
dev/bench/arm64/: data.js
dev/bench/x86_32/: data.js
dev/bench/x86_64/: data.js
examples/: CMakeLists.txt  example.cpp
include/: zip_view.hpp
tests/: CMakeLists.txt  algo.cpp  base.cpp  edge.cpp  iter.cpp  iterator_category.cpp  main.cpp  temp.cpp
